--- a/svencoop/server.cfg
+++ b/svencoop/server.cfg
@@ -10,7 +10,7 @@
 hostname "Half-life Survival [Anti-rush+Hardcore] (US)"
 log "on"
 
-//rcon_password "8244789"
+//rcon_password ""
 //sv_password ""
 
 sys_ticrate 128
