--- a/svencoop/maps/op4l_c05_a2.cfg
+++ b/svencoop/maps/op4l_c05_a2.cfg
@@ -1,7 +1,9 @@
-mp_weapon_respawndelay -1
-mp_ammo_respawndelay 60
-mp_item_respawndelay 60
-mp_allowmonsterinfo 0
+mp_weapon_respawndelay 10
+mp_ammo_respawndelay 120
+mp_item_respawndelay 10
+mp_allowmonsterinfo 1
+
+mp_classic_mode 0
 
 mp_disablegaussjump 1
 mp_npckill 2
@@ -41,6 +43,7 @@ ammo_buckshot
 ammo_556
 ammo_556
 ammo_357
+weapon_m16
 
 map_script HLSP
 mp_survival_supported 1
