--- a/svencoop/maps/op4l_c11_a1.cfg
+++ b/svencoop/maps/op4l_c11_a1.cfg
@@ -30,13 +30,13 @@ mp_classic_mode 0
 
 weapon_crowbar
 weapon_glock
-weapon_357
 weapon_9mmAR
 weapon_shotgun
 weapon_m16
 weapon_gauss
 weapon_crossbow
 weapon_m249
+weapon_gauss
 
 ammo_9mm 6
 ammo_9mmARgrenade 2
@@ -48,4 +48,4 @@ ammo_gaussclip 1
 
 map_script HLSP
 mp_survival_supported 1
-mp_survival_nextmap op4l_c09_a1
+mp_survival_nextmap op4l_c11_a2
