--- a/svencoop/maps/op4l_c11_a3.cfg
+++ b/svencoop/maps/op4l_c11_a3.cfg
@@ -50,5 +50,6 @@ ammo_556 4
 ammo_gaussclip 1
 
 map_script HLSP
+map_script hlsp/hl_c11_a3
 mp_survival_supported 1
-mp_survival_nextmap op4l_c11_a3
+mp_survival_nextmap op4l_c11_a4
