--- a/svencoop/mapvote.cfg
+++ b/svencoop/mapvote.cfg
@@ -1,36 +1,16 @@
 addvotemap -sp_campaign_portal
-addvotemap hl_c00
-addvotemap hl_c01_a1
-addvotemap hl_c01_a2
-addvotemap hl_c02_a1
-addvotemap hl_c02_a2
+addvotemap campaign_vote
 addvotemap hl_c03
-addvotemap hl_c04
 addvotemap hl_c05_a1
-addvotemap hl_c05_a2
-addvotemap hl_c05_a3
-addvotemap hl_c06
-addvotemap hl_c07_a1
-addvotemap hl_c07_a2
-addvotemap hl_c08_a1
-addvotemap hl_c08_a2
-addvotemap hl_c09
 addvotemap hl_c10
-addvotemap hl_c11_a1
-addvotemap hl_c11_a2
-addvotemap hl_c11_a3
-addvotemap hl_c11_a4
-addvotemap hl_c11_a5
-addvotemap hl_c12
-addvotemap hl_c13_a1
-addvotemap hl_c13_a2
-addvotemap hl_c13_a3
-addvotemap hl_c13_a4
-addvotemap hl_c14
-addvotemap hl_c15
-addvotemap hl_c16_a1
-addvotemap hl_c16_a2
-addvotemap hl_c16_a3
-addvotemap hl_c16_a4
-addvotemap hl_c17
-addvotemap hl_c18
+addvotemap rl02
+addvotemap pk02
+addvotemap th_ep2_00
+addvotemap th_ep3_00
+addvotemap op4l_c03
+addvotemap asmap00
+addvotemap of0a0
+addvotemap t0a0
+addvotemap sc_tetris1
+addvotemap eshq01
+addvotemap sc_tetris3
